--- a/styles/dariomr.css
+++ b/styles/dariomr.css
@@ -41,20 +41,33 @@ section>h2 {
     box-sizing: border-box;
 }
 
+nav {
+    display:inline;
+    position:absolute;
+    
+}
+
 nav>a {
+    box-sizing: border-box;
     font-size: 20px;
+    font-weight: bold;
     display: inline-block;
     margin: 10px;
-    border: 2px solid #000;
+    border: 1px solid #000;
     color: white;
     background-color: #ca20b3;
     height: 2em;
     width: 5em;
-    padding: 5px;
+    padding: 5px, 15px;
     border-radius: 10px;
     text-align: center;
-    box-sizing: border-box;
+    
 }
+
+
+
+
+
 
 .active {
     color: rgb(34, 8, 8);
