--- a/styles/main_task04.css
+++ b/styles/main_task04.css
@@ -39,12 +39,14 @@ h1 {
     height: 50vh;
     background-image: url("/assets/img/hockey2.jpg");
     background-size: 100% 100%;
+    border-radius: 0%;
     background-repeat: no-repeat;
 }
 
 .header3 {
     display: flex;
     flex-direction: column;
+    border-radius: 0%;
     height: 50vh;
     background-image: url("/assets/img/hockey3.jpg");
     background-size: 100% 100%;
@@ -102,6 +104,11 @@ nav {
     top: 7vh;
  }
 
+ .bold{
+    font-weight: bold;
+}
+
+
  .container {
     display: flex;
     flex-direction: row;
@@ -156,7 +163,9 @@ ol {
 .main {
     background-color: #262626;
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    min-height: 1150px;
 
 }
 
@@ -176,7 +185,7 @@ form {
 .form {
     display: flex;
     gap: 1.5rem;
-    margin-left: 4rem;
+    margin-left: 20rem;
 }
 
 label {
@@ -185,6 +194,7 @@ label {
 
 fieldset {
     border: 0;
+    padding: 10px;
     
 }
 
@@ -193,8 +203,13 @@ fieldset {
     flex-direction: column;
     gap: 2rem;
     font-size: 1.2rem;
-    margin-top: 80px;
-    margin-left: -1rem;
+    margin-top: 10px;
+    margin-left: 1rem;
+
+}
+
+div dl{
+text-align: justify;
 
 }
 
@@ -260,10 +275,6 @@ footer {
     align-items: center;
 }
 
-
-/* Media Query reservado para futura entrega
-
-
 @media screen and (max-width:1861px) {
     nav{
         right: 20vh;
@@ -272,13 +283,13 @@ footer {
     .logo {
         width: 200px;
         height: 200px;
-        transform: translate(750px, -300px);
+        transform: translate(750px, -400px);
     }
         
     .logoform {
         width: 200px;
         height: 200px;
-        transform: translate(750px, -250px);
+        transform: translate(650px, -450px);
     }
 }
 
@@ -344,13 +355,18 @@ footer {
     .logo {
         width: 100px;
         height: 100px;
-        transform: translate(320px, -440px);
+        transform: translate(280px, -400px);
     }
         
     .logoform {
         width: 100px;
         height: 100px;
-        transform: translate(320px, -370px);
+        transform: translate(280px, -370px);
     }
-}*/
+}
 
+.form {
+    display: flex;
+    gap: 1.4rem;
+    margin: 0%;
+}
